--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-<!--    <uses-feature android:name="android.hardware.camera" android:required="false" />-->
-<!--    <uses-permission android:name="android.permission.CAMERA" />-->
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
+    <uses-permission android:name="android.permission.CAMERA" />
     <application
         android:label="manual_camera_test"
         android:name="${applicationName}"
